--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,14 +1,14 @@
 {
-    "DEBUG": true,
-    "TITLE": "RUGHAI",
-    "FONT_NAME": "I pixel u",
-    "VIEW_WIDTH": 240,
-    "VIEW_HEIGHT": 160,
-    "PIXEL_PERFECT": false,
-    "WINDOW_WIDTH": 720,
-    "WINDOW_HEIGHT": 480,
-    "FULLSCREEN": true,
-    "TARGET_FPS": 480,
-    "BACKGROUND_COLOR": "#222222",
-    "CAM_SPEED": 5.0
+    "debug": true,
+    "title": "RUGHAI",
+    "font_name": "I pixel u",
+    "view_width": 240,
+    "view_height": 160,
+    "pixel_perfect": false,
+    "window_width": 720,
+    "window_height": 480,
+    "fullscreen": false,
+    "target_fps": 480,
+    "background_color": "#222222",
+    "camera_speed": 5.0
 }
