--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,7 @@
 {
-    "debug": false,
+    "debug": true,
     "show_collisions": true,
+    "show_tiles_grid": false,
     "title": "RUGHAI",
     "font_name": "I pixel u",
     "view_width": 240,
@@ -8,7 +9,7 @@
     "pixel_perfect": false,
     "window_width": 720,
     "window_height": 480,
-    "fullscreen": true,
+    "fullscreen": false,
     "target_fps": 480,
     "camera_speed": 5.0
 }
