--- a/assets/settings.json
+++ b/assets/settings.json
@@ -11,5 +11,6 @@
     "window_height": 480,
     "fullscreen": true,
     "target_fps": 480,
-    "camera_speed": 5.0
+    "camera_speed": 5.0,
+    "layers_z_spacing": 64
 }
