--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "debug": true,
+    "debug": false,
     "show_collisions": true,
     "show_tiles_grid": true,
     "title": "RUGHAI",
@@ -10,7 +10,7 @@
     "window_width": 720,
     "window_height": 480,
     "fullscreen": true,
-    "target_fps": 480,
+    "target_fps": 120,
     "camera_speed": 5.0,
     "layers_z_spacing": 64
 }
