--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,6 @@
 {
     "debug": false,
-    "show_collisions": false,
+    "show_collisions": true,
     "show_tiles_grid": false,
     "title": "RUGHAI",
     "font_name": "I pixel u",
