--- a/assets/settings.json
+++ b/assets/settings.json
@@ -12,5 +12,6 @@
     "fullscreen": true,
     "target_fps": 120,
     "camera_speed": 5.0,
-    "layers_z_spacing": 32.0
+    "layers_z_spacing": 32.0,
+    "tilemap_buffer": 2
 }
