--- a/assets/settings.json
+++ b/assets/settings.json
@@ -7,9 +7,9 @@
     "view_width": 240,
     "view_height": 160,
     "pixel_perfect": false,
-    "window_width": 240,
-    "window_height": 160,
-    "fullscreen": true,
+    "window_width": 720,
+    "window_height": 480,
+    "fullscreen": false,
     "target_fps": 120,
     "camera_speed": 5.0,
     "layers_z_spacing": 32.0,
