--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "debug": true,
+    "debug": false,
     "show_collisions": true,
     "show_tiles_grid": false,
     "title": "RUGHAI",
@@ -9,8 +9,8 @@
     "pixel_perfect": false,
     "window_width": 720,
     "window_height": 480,
-    "fullscreen": false,
-    "target_fps": 10,
+    "fullscreen": true,
+    "target_fps": 59,
     "camera_speed": 5.0,
     "layers_z_spacing": 32.0,
     "tilemap_buffer": 2
