--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,7 +1,8 @@
 {
-    "debug": false,
+    "debug": true,
     "show_collisions": true,
     "show_tiles_grid": true,
+    "free_cam_bounds": false,
     "title": "RUGHAI",
     "font_name": "rughai",
     "view_width": 240,
