--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,5 +1,5 @@
 {
-    "debug": true,
+    "debug": false,
     "show_collisions": true,
     "show_tiles_grid": true,
     "free_cam_bounds": false,
