--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,6 @@
 {
     "debug": false,
-    "show_collisions": true,
+    "show_collisions": false,
     "show_tiles_grid": true,
     "free_cam_bounds": false,
     "title": "RUGHAI",
