--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,7 +1,7 @@
 {
-    "debug": false,
-    "show_collisions": false,
-    "show_tiles_grid": true,
+    "debug": true,
+    "show_collisions": true,
+    "show_tiles_grid": false,
     "free_cam_bounds": false,
     "title": "RUGHAI",
     "font_name": "rughai",
